build-logs-failed/build-mysql-simple-0.4.9.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - mysql-simple-0.4.9 (lib) (first run)
 - mysql-simple-0.4.9 (test:test) (first run)
Configuring library for mysql-simple-0.4.9...
Preprocessing library for mysql-simple-0.4.9...
Building library for mysql-simple-0.4.9...
[1 of 7] Compiling Database.MySQL.Internal.Blaze

Database/MySQL/Internal/Blaze.hs:47:22: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘quotRemInteger’ (imported from GHC.Num):
    Deprecated: "Use integerQuotRem# instead"
   |
47 | putH (n:ns) = case n `quotRemInteger` maxInt of
   |                      ^^^^^^^^^^^^^^^^

Database/MySQL/Internal/Blaze.hs:99:22: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘quotRemInteger’ (imported from GHC.Num):
    Deprecated: "Use integerQuotRem# instead"
   |
99 | putB (n:ns) = case n `quotRemInteger` maxInt of
   |                      ^^^^^^^^^^^^^^^^

Database/MySQL/Internal/Blaze.hs:154:30: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘quotRemInteger’ (imported from GHC.Num):
    Deprecated: "Use integerQuotRem# instead"
    |
154 |     splith p (n:ns) = case n `quotRemInteger` p of
    |                              ^^^^^^^^^^^^^^^^

Database/MySQL/Internal/Blaze.hs:159:30: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘quotRemInteger’ (imported from GHC.Num):
    Deprecated: "Use integerQuotRem# instead"
    |
159 |     splitb p (n:ns) = case n `quotRemInteger` p of
    |                              ^^^^^^^^^^^^^^^^
[2 of 7] Compiling Database.MySQL.Simple.Result
[3 of 7] Compiling Database.MySQL.Simple.Types
[4 of 7] Compiling Database.MySQL.Simple.QueryResults
[5 of 7] Compiling Database.MySQL.Simple.Param
[6 of 7] Compiling Database.MySQL.Simple.QueryParams
[7 of 7] Compiling Database.MySQL.Simple
Configuring test suite 'test' for mysql-simple-0.4.9...
Preprocessing test suite 'test' for mysql-simple-0.4.9...
Building test suite 'test' for mysql-simple-0.4.9...
[1 of 4] Compiling Common

test/Common.hs:10:10: error: [GHC-59692]
    Duplicate instance declarations:
      instance Show Builder -- Defined at test/Common.hs:10:10
      instance Show Builder -- Defined in ‘Data.ByteString.Builder’
   |
10 | instance Show BS.Builder where
   |          ^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:test from mysql-simple-0.4.9.

